plugins {
    id 'com.github.teruteru128.study.java-application-conventions'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

version = '1.1.0-SNAPSHOT'

application {
    mainModule = 'com.github.teruteru.sample'
    mainClass = 'com.github.teruteru128.sample.Main'
    applicationDefaultJvmArgs = [
            '--enable-native-access=com.github.teruteru.study,com.github.teruteru.sample,com.github.teruteru.foreign.gmp,org.xerial.sqlitejdbc'
    ]
}

dependencies {
    implementation(project(':develop'))
    implementation project(':gmp')
    implementation(project(':math'))

    // https://mvnrepository.com/artifact/org.apache.commons/commons-rng-simple
    implementation 'org.apache.commons:commons-rng-simple:1.6'

    // https://mvnrepository.com/artifact/org.apache.commons/commons-statistics-distribution
    implementation 'org.apache.commons:commons-statistics-distribution:1.2'

    // https://mvnrepository.com/artifact/org.bouncycastle/bcmail-jdk18on
    implementation 'org.bouncycastle:bcprov-jdk18on:1.83'

    // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
    implementation 'org.xerial:sqlite-jdbc:3.51.1.0'

    // https://picocli.info/
    // https://mvnrepository.com/artifact/info.picocli/picocli
    implementation 'info.picocli:picocli:4.7.7'

    // https://mvnrepository.com/artifact/org.apache.tomcat.embed/tomcat-embed-core
    implementation 'org.apache.tomcat.embed:tomcat-embed-core:11.0.15'

    // https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-jdbc
    implementation 'org.apache.tomcat:tomcat-jdbc:11.0.15'

    // https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-dbcp
    implementation 'org.apache.tomcat:tomcat-dbcp:11.0.15'

    // https://mvnrepository.com/artifact/jakarta.servlet/jakarta.servlet-api
    compileOnly 'jakarta.servlet:jakarta.servlet-api:6.1.0'

    // https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf
    implementation 'org.thymeleaf:thymeleaf:3.1.3.RELEASE'
}

tasks.withType(JavaCompile).configureEach {
    // モジュールシステムに関する「存在しないパッケージ」の警告を抑制する
    options.compilerArgs << "-Xlint:module"
}
